@@ -9,6 +9,7 @@ import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
+import java.util.stream.Collectors;
 
 public abstract class QuoteService<Q extends Quote, S extends Source<Q>>
 {
@@ -31,35 +32,33 @@ public abstract class QuoteService<Q extends Quote, S extends Source<Q>>
         Collection<S> enabledSources = getSources(false);
         LOGGER.info("All available sources are {}", sources);
         LOGGER.info("Enabled sources are {}", enabledSources);
-        enabledSources.forEach(source -> {
-            executor.submit(() -> {
-                try {
-                    LOGGER.info("{} trying to connect", source.getId());
-                    source.connect();
-                } catch (RuntimeException e) {
-                    source.forceDisable();
-                    LOGGER.warn("Exception suppressed when {} was connecting", source.getId(), e);
-                }
-            });
-        });
+        enabledSources.forEach(source -> executor.submit(() -> {
+            try {
+                LOGGER.info("{} trying to connect", source.getId());
+                source.connect();
+            } catch (RuntimeException e) {
+                source.forceDisable();
+                LOGGER.warn("Exception suppressed when {} was connecting", source.getId(), e);
+            }
+        }));
     }
 
     public List<Q> getAll(String... exchanges)
     {
         return getSources(false, exchanges)
                 .stream()
-                .flatMap(source -> source.getAll().stream()).toList();
+                .flatMap(source -> source.getAll().stream()).collect(Collectors.toList());
     }
 
     public Collection<S> getSources(boolean all, String... exchanges)
     {
-        List<String> xchanges = exchanges == null ? Collections.EMPTY_LIST : Arrays.asList(exchanges);
+        List<String> xchanges = exchanges == null ? Collections.emptyList() : Arrays.asList(exchanges);
         if (all) {
             return Collections.unmodifiableCollection(sources);
         }
         return Collections.unmodifiableCollection(sources
                 .stream()
                 .filter(source -> xchanges.isEmpty() || xchanges.contains(source.getId()))
-                .filter(Source::isEnabled).toList());
+                .filter(Source::isEnabled).collect(Collectors.toList()));
     }
 }
